--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/patorrad/treadLight#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "express-handlebars": "^3.1.0",
     "mysql2": "^2.1.0",
     "plotly": "^1.0.6",
     "sequelize": "^5.21.3"
